--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task1": "npx ts-node task_1.ts",
+    "task2": "npx ts-node task_2.ts",
+    "task3": "npx ts-node task_3.ts",
+    "task4": "npx ts-node task_4.ts",
+    "task5": "npx ts-node task_5.ts",
+    "task6": "npx ts-node task_6.ts",
+    "task7": "npx ts-node task_7.ts",
+    "task8": "npx ts-node task_8.ts",
+    "task9": "npx ts-node task_9.ts",
+    "task10": "npx ts-node task_10.ts",
+    "task11": "npx ts-node task_11.ts",
+    "task12": "npx ts-node task_12.ts",
+    "task13": "npx ts-node task_13.ts",
+    "task14": "npx ts-node task_14.ts"
   },
   "author": "",
   "license": "ISC"
