--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "task6": "npx ts-node task_6.ts",
     "task7": "npx ts-node task_7.ts",
     "task8": "npx ts-node task_8.ts",
-    "task9": "npx ts-node task_9.ts"
+    "task9": "npx ts-node task_9.ts",
+    "task10": "npx ts-node task_10.ts",
+    "task11": "npx ts-node task_11.ts"
   },
   "author": "",
   "license": "ISC",
